--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <div class="page-header-wrapper">
                     <div class="container">
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                            <h2>Services</h2>
+                            <h2>Skills</h2>
                             <div class="devider"></div>
                             <p class="subtitle">What i know how to do</p>
                         </div>
