--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                                                 <div class="content">
                                                     <img src="img/team/image1.jpg" alt="title"/>
                                                     <div class="team-hover text-center">
-                                                        <i class="fa fa-female"></i>
+                                                        <i class="fa fa-male"></i>
                                                         <p>Pulse</p>
                                                     </div>
                                                 </div>
